@@ -19,6 +19,8 @@ Revelation changelog
 
 	* use fallback folder icons when not found in theme
 
+	* update icons on theme change
+
 2005-03-16  Erik Grinaker <erikg@codepoet.no>
 
 	* make io.file_monitor() handle NotSupportedError from gnome-vfs
